--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/themes": "^3.0.5",
     "react": "^18.2.0",
+    "react-compare-slider": "^3.1.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
