--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@radix-ui/themes": "^3.0.5",
     "react": "^18.2.0",
     "react-compare-slider": "^3.1.0",
